@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/solidautoeject
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/solidautoeject/ChangeLog,v 1.18 2009/12/10 17:50:25 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/solidautoeject/ChangeLog,v 1.19 2009/12/10 23:57:01 scarabeus Exp $
+
+  10 Dec 2009; Tomáš Chvátal <scarabeus@gentoo.org>
+  -solidautoeject-4.3.1.ebuild:
+  Drop KDE SC-4.3.1.
 
   10 Dec 2009; Christian Faulhammer <fauli@gentoo.org>
   solidautoeject-4.3.3.ebuild:
